Rename some files

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="tab-guardian-app"></div>
-    <script type="module" src="/src/popup/main.ts"></script>
+    <script type="module" src="/src/popup/popup.ts"></script>
   </body>
 </html>
