WIP on settings

--- a/settings.html
+++ b/settings.html
@@ -6,10 +6,7 @@
     <title>Settings</title>
 </head>
 <body>
-    <div>
-        <h1>Settings</h1>
-        <p>Tab Guardian settings</p>
-    </div>
-    <script type="module" src="src/settings/settings.ts"></script>
+    <div id="tab-guardian-settings"></div>
+    <script type="module" src="src/settings/main.ts"></script>
 </body>
 </html>
