refactor: Update HTML and CSS for popup window

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-slate-950">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
     <meta name="author" content="Serhii Chornenkyi" />
     <title>Tab Guardian</title>
   </head>
-  <body>
+  <body class="text-font w-[340px] h-[540px] relative bg-page">
     <div id="tab-guardian-app"></div>
     <script type="module" src="/src/popup/main.ts"></script>
   </body>
