Small style fixes

--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
 </head>
-<body>
+<body class="text-font">
     <div id="tab-guardian-settings"></div>
     <script type="module" src="src/settings/main.ts"></script>
 </body>
