refactor: rename some files

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Serhii Chornenkyi" />
     <title>Tab Guardian</title>
   </head>
-  <body class="text-font w-[400px] h-[540px] relative bg-page">
+  <body class="text-font w-100 h-135 relative bg-page">
     <div id="tab-guardian-app"></div>
-    <script type="module" src="/src/popup/main.ts"></script>
+    <script type="module" src="/src/popup/popup.ts"></script>
   </body>
 </html>
