--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,6 @@
 </head>
 <body class="text-font">
     <div id="tab-guardian-settings"></div>
-    <script type="module" src="src/settings/main.ts"></script>
+    <script type="module" src="src/settings/settings.ts"></script>
 </body>
 </html>
